--- a/Rifqi2(Julia)/login.html
+++ b/Rifqi2(Julia)/login.html
@@ -14,9 +14,9 @@
     <div class="container login">
         <div class="box-menu d-flex justify-content-center mt-5">
             <ul class="d-flex menu">
-                <a class="" href="">DOCTORS</a>
+                <a class="" href="doctors.html">DOCTORS</a>
                 <a class="" href="">REGISTER</a>
-                <a class="active" href="">LOGIN</a>
+                <a class="active" href="login.html">LOGIN</a>
             </ul>
         </div>
         <div class="box-content row m-5">
