--- a/Rifqi2(Julia)/doctors.html
+++ b/Rifqi2(Julia)/doctors.html
@@ -11,23 +11,32 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
   <body>
-    <div class="container main">
+    <div class="container doctors">
         <div class="box-menu d-flex justify-content-center mt-5">
             <ul class="d-flex menu">
-                <a class="" href="">DOCTORS</a>
+                <a class="active" href="">DOCTORS</a>
                 <a class="" href="">REGISTER</a>
-                <a class="" href="">LOGIN</a>
+                <a class="" href="login.html">LOGIN</a>
             </ul>
         </div>
-        <div class="box-content row m-5">
-            <div class="col-8 text-box">
-                <b class="title">TERATAICARE</b>
-                <p class="desk mt-4">Cepat Sembuh Dengan Teratai Dua 
-                    Pesan Doktermu, Hindari Antrean Lama!</p>
-                <a class="btn btn-success mt-3" href="">GET STARTED</a>
+        <div class="box-content row m-5 justify-content-center">
+            <div class="col-4 content">
+                <a href="#" class="btn btn-content">MAKE AN APPOINTMENT</a>
             </div>
-            <div class="col-4">
-                <img src="images/logo.svg" alt="" style="max-width: 22vw;">
+            <div class="col-4 content">
+                <a href="#" class="btn btn-content">MAKE AN APPOINTMENT</a>
+            </div>
+            <div class="col-4 content">
+                <a href="#" class="btn btn-content">MAKE AN APPOINTMENT</a>
+            </div>
+            <div class="col-4 content">
+                <a href="#" class="btn btn-content">MAKE AN APPOINTMENT</a>
+            </div>
+            <div class="col-4 content">
+                <a href="#" class="btn btn-content">MAKE AN APPOINTMENT</a>
+            </div>
+            <div class="col-4 content">
+                <a href="#" class="btn btn-content">MAKE AN APPOINTMENT</a>
             </div>
         </div>
         <a class="CustomerService" href=""><img src="images/CsIcon.svg" alt=""></a>
